代码生成优化

--- a/eam/common/generator/src/main/resources/templates/ServiceInterface.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ServiceInterface.java.vm
@@ -5,24 +5,24 @@ package #(package);
 #(classJavaDoc)
 
 public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
-	
+
 	/**
 	 * 插入实体
 	 * @param #(poVar) 实体数据
 	 * @return 插入是否成功
 	 * */
 	Result insert(#(poSimpleName) #(poVar));
- 
+
 	/**
 	 * 批量插入实体，事务内
 	 * @param #(poListVar) 实体数据清单
 	 * @return 插入是否成功
 	 * */
 	Result insertList(List<#(poSimpleName)> #(poListVar));
-	
-	
+
+
 	#(deleteByIdMethods)
-	
+
 	#if(isSimplePK)
 	/**
 	 * 批量物理删除，仅支持单字段主键表
@@ -30,7 +30,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 是否删除成功
 	 * */
 	<T> Result deleteByIdsPhysical(List<T> #(idPropertyName)s);
-	
+
 	/**
 	 * 批量逻辑删除，仅支持单字段主键表
 	 * @param #(idPropertyName)s 主键清单
@@ -38,9 +38,9 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * */
 	<T> Result deleteByIdsLogical(List<T> #(idPropertyName)s);
 	#end
-	
+
 	#(updateByIdMethod)
-	
+
 	/**
 	 * 更新实体
 	 * @param #(poVar) 数据对象
@@ -48,8 +48,8 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 保存是否成功
 	 * */
 	Result update(#(poSimpleName) #(poVar) , SaveMode mode);
-	
-	
+
+
 	/**
 	 * 更新实体集，事务内
 	 * @param #(poListVar) 数据对象列表
@@ -57,7 +57,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 保存是否成功
 	 * */
 	Result updateList(List<#(poSimpleName)> #(poListVar), SaveMode mode);
-	
+
 	/**
 	 * 保存实体，如果主键值不为 null，则更新，否则插入
 	 * @param #(poVar) 实体数据
@@ -65,7 +65,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 保存是否成功
 	 * */
 	Result save(#(poSimpleName) #(poVar) , SaveMode mode);
-	
+
 	/**
 	 * 保存实体，如果主键值不为null，则更新，否则插入
 	 * @param #(poListVar) 实体数据清单
@@ -73,7 +73,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 保存是否成功
 	 * */
 	Result saveList(List<#(poSimpleName)> #(poListVar) , SaveMode mode);
-	
+
 	/**
 	 * 检查实体中的数据字段是否已经存在
 	 * @param #(poVar)  实体对象
@@ -81,10 +81,10 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 是否已经存在
 	 * */
 	boolean checkExists(#(poSimpleName) #(poVar),DBField... field);
- 
+
 	#(getByIdMethod)
 	#if(isSimplePK)
-		
+
 	/**
 	 * 检查实体中的数据字段是否已经存在
 	 * @param #(idPropertyName)s  主键清单
@@ -102,14 +102,14 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	Result<#(poSimpleName)> checkExists(#(poSimpleName) #(poVar));
 
 	/**
-	 * 根据实体数构建默认的条件表达式，字符串使用模糊匹配
+	 * 根据实体数构建默认的条件表达式, 不支持 Join 其它表
 	 * @param sample 数据样例
 	 * @return ConditionExpr 条件表达式
 	 * */
 	ConditionExpr buildQueryCondition(#(poSimpleName) sample);
-	
+
 	/**
-	 * 根据实体数构建默认的条件表达式, 字符串是否使用模糊匹配
+	 * 根据实体数构建默认的条件表达式, 不支持 Join 其它表
 	 * @param sample 数据样例
 	 * @param tableAliase 数据表别名
 	 * 	@return ConditionExpr 条件表达式
@@ -122,7 +122,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 查询结果
 	 * */
 	List<#(poSimpleName)> queryList(#(poSimpleName) sample);
- 
+
 	/**
 	 * 查询实体集合，默认情况下，字符串使用模糊匹配，非字符串使用精确匹配
 	 * @param sample  查询条件
@@ -131,7 +131,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 查询结果
 	 * */
 	List<#(poSimpleName)> queryList(#(poSimpleName) sample,ConditionExpr condition,OrderBy orderBy);
-	
+
 	/**
 	 * 查询实体集合，默认情况下，字符串使用模糊匹配，非字符串使用精确匹配
 	 * @param sample  查询条件
@@ -139,7 +139,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 查询结果
 	 * */
 	List<#(poSimpleName)> queryList(#(poSimpleName) sample,OrderBy orderBy);
-	
+
 	/**
 	 * 查询实体集合，默认情况下，字符串使用模糊匹配，非字符串使用精确匹配
 	 * @param sample  查询条件
@@ -147,14 +147,14 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 查询结果
 	 * */
 	List<#(poSimpleName)> queryList(#(poSimpleName) sample,ConditionExpr condition);
-	
+
 	/**
 	 * 查询单个实体
 	 * @param sample  查询条件
 	 * @return 查询结果
 	 * */
 	#(poSimpleName) queryEntity(#(poSimpleName) sample);
-	
+
 	/**
 	 * 分页查询实体集
 	 * @param sample  查询条件
@@ -163,7 +163,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 查询结果
 	 * */
 	PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample,int pageSize,int pageIndex);
-	
+
 	/**
 	 * 分页查询实体集
 	 * @param sample  查询条件
@@ -174,7 +174,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 查询结果
 	 * */
 	PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample,ConditionExpr condition,OrderBy orderBy,int pageSize,int pageIndex);
-	
+
 	/**
 	 * 分页查询实体集
 	 * @param sample  查询条件
@@ -184,7 +184,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 查询结果
 	 * */
 	PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample,ConditionExpr condition,int pageSize,int pageIndex);
-	
+
 	/**
 	 * 分页查询实体集
 	 * @param sample  查询条件
@@ -194,7 +194,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 查询结果
 	 * */
 	PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample,OrderBy orderBy,int pageSize,int pageIndex);
- 
+
  	/**
 	 * 查询指定字段的数据清单
 	 * @param <T> 元素类型
@@ -204,7 +204,7 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 * @return 列数据
 	 * */
 	<T> List<T> queryValues(DBField field,Class<T> type, ConditionExpr condition);
- 
+
 	/**
 	 * 查询指定字段的数据清单
 	 * @param <T> 元素类型
@@ -247,5 +247,5 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	 */
 	void saveRelation(#(relationMasterVarType) #(relationMasterVar),List<#(relationSlaveVarType)> #(relationSlaveVar));
 	#end
- 
+
 }
