--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_attribute/asset_attribute_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_attribute/asset_attribute_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产字段配置 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-22 21:47:21
+ * @since 2021-10-22 22:22:52
  */
  -->
  <!DOCTYPE html>
@@ -59,17 +59,19 @@
                         </div>
                     </div>
 
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('字段值类型')}">字段值类型</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="valueType" id="valueType" name="valueType" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('字段值类型') }" type="text" class="layui-input"  />
-                        </div>
+                
+                <div class="layui-form-item" >
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('字段值类型')}">字段值类型</div><div class="layui-required">*</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input input-type="radio" type="radio" name="valueType" lay-filter="valueType" th:each="e,stat:${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeValueTypeEnum')}" th:value="${e.code}" th:title="${e.text}" th:checked="${(e.code=='' || stat.index==-1)?'yes':'no'}">
                     </div>
+                </div>
+
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('取值类型')}">取值类型</div></div>
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('取值路径')}">取值路径</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="valuePath" id="valuePath" name="valuePath" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('取值类型') }" type="text" class="layui-input"  />
+                            <input lay-filter="valuePath" id="valuePath" name="valuePath" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('取值路径') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
@@ -178,13 +180,14 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
+    var RADIO_VALUETYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeValueTypeEnum')}]];
     var RADIO_DIMENSION_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeDimensionEnum')}]];
     var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusValidEnum')}]];
     var RADIO_REQUIRED_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusYNEnum')}]];
     var RADIO_REQUIREDMODIFY_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusYNEnum')}]];
     var RADIO_COMPONENTTYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeComponentTypeEnum')}]];
     var SELECT_OWNER_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeOwnerEnum')}]];
-    var VALIDATE_CONFIG={"owner":{"labelInForm":"归属","inputType":"select_box","required":true},"componentType":{"labelInForm":"组件类型","inputType":"radio_box","required":true},"code":{"labelInForm":"字段编码","inputType":"text_input","required":true},"label":{"labelInForm":"字段名称","inputType":"text_input","required":true},"dimension":{"labelInForm":"所属维度","inputType":"radio_box","required":true},"requiredModify":{"labelInForm":"是否修改","inputType":"radio_box","required":true},"required":{"labelInForm":"是否必选","inputType":"radio_box","required":true},"status":{"labelInForm":"状态","inputType":"radio_box","required":true}};
+    var VALIDATE_CONFIG={"owner":{"labelInForm":"归属","inputType":"select_box","required":true},"componentType":{"labelInForm":"组件类型","inputType":"radio_box","required":true},"code":{"labelInForm":"字段编码","inputType":"text_input","required":true},"valueType":{"labelInForm":"字段值类型","inputType":"radio_box","required":true},"label":{"labelInForm":"字段名称","inputType":"text_input","required":true},"dimension":{"labelInForm":"所属维度","inputType":"radio_box","required":true},"requiredModify":{"labelInForm":"是否修改","inputType":"radio_box","required":true},"required":{"labelInForm":"是否必选","inputType":"radio_box","required":true},"status":{"labelInForm":"状态","inputType":"radio_box","required":true}};
     var AUTH_PREFIX="eam_asset_attribute";
 
 
