--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_attribute/asset_attribute_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_attribute/asset_attribute_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产字段配置 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-22 21:47:21
+ * @since 2021-10-22 22:22:44
  */
  -->
  <!DOCTYPE html>
@@ -36,8 +36,8 @@
                 <div class="layui-form toolbar search-inputs">
                     <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
                     <!-- 字段编码 , code ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 字段值类型 , valueType ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 取值类型 , valuePath ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 字段值类型 , valueType ,typeName=radio_box, isHideInSearch=true -->
+                    <!-- 取值路径 , valuePath ,typeName=text_input, isHideInSearch=true -->
                     <!-- 标签备注 , labelNotes ,typeName=text_input, isHideInSearch=true -->
                     <!-- 所属维度 , dimension ,typeName=radio_box, isHideInSearch=false -->
                     <div class="search-unit">
@@ -130,6 +130,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
+    var RADIO_VALUETYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeValueTypeEnum')}]];
     var RADIO_DIMENSION_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeDimensionEnum')}]];
     var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusValidEnum')}]];
     var RADIO_REQUIRED_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusYNEnum')}]];
