--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_borrow/asset_borrow_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_borrow/asset_borrow_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产借用 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-22 21:47:37
+ * @since 2021-10-24 10:31:55
  */
  -->
  <!DOCTYPE html>
@@ -41,8 +41,10 @@
                         <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('办理状态')}" class="search-label status-label">办理状态</span><span class="search-colon">:</span></div>
                         <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}" style="width:150px"></div>
                     </div>
+                    <!-- 借用状态 , borrowStatus ,typeName=select_box, isHideInSearch=true -->
                     <!-- 业务名称 , name ,typeName=text_input, isHideInSearch=true -->
                     <!-- 预计归还时间 , planReturnDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 归还时间 , returnDate ,typeName=date_input, isHideInSearch=true -->
                     <!-- 制单人 , originatorId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 业务日期 , businessDate ,typeName=date_input, isHideInSearch=true -->
                     <!-- 附件 , attach ,typeName=upload, isHideInSearch=true -->
@@ -104,6 +106,7 @@
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
         <button th:if="${perm.checkAuth('eam_asset_borrow:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
+        <button id="asset-return" class="layui-btn icon-btn layui-btn-sm  asset_return_buttion " lay-event="tool-asset-return"><span th:text="${lang.translate('归还')}">归还</span></button>
     </div>
 </script>
 
@@ -127,6 +130,7 @@
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
+    var SELECT_BORROWSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetBorrowStatusEnum')}]];
     var AUTH_PREFIX="eam_asset_borrow";
 
     // 是否需要审批
