--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/approval/asset_register_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/approval/asset_register_list.html
@@ -167,14 +167,14 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
+        <button  th:if="${perm.checkAuth('my-business-asset-insert:agree')}"   id="agree-button" class="layui-btn icon-btn layui-btn-sm agree-new-button" lay-event="agree"><i class="layui-icon"></i><span th:text="${lang.translate('同意')}"同意</span></button>
+        <button  th:if="${perm.checkAuth('my-business-asset-insert:deny')}"    id="deny-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm  deny-new-button" lay-event="deny"><i class="layui-icon"></i><span th:text="${lang.translate('拒绝')}">拒绝</span></button>
     </div>
 </script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
-
-    <button th:if="${perm.checkAuth('eam_asset:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
-
+    <button th:if="${perm.checkAuth('my-business-asset-insert:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
 </script>
 
 
