--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_allocation/asset_allocation_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_allocation/asset_allocation_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产调拨 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-26 15:27:22
+ * @since 2021-10-27 09:55:41
  */
  -->
  <!DOCTYPE html>
@@ -40,6 +40,13 @@
             <div class="layui-col-xs4 form-column">
 
                     <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('业务名称')}">业务名称</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="name" id="name" name="name" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('业务名称') }" type="text" class="layui-input"  />
+                        </div>
+                    </div>
+
+                                    <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('调出所属公司')}">调出所属公司</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
                             <input lay-filter="outOwnCompanyId" id="outOwnCompanyId" name="outOwnCompanyId"  type="hidden" class="layui-input"    lay-verify="|required"   />
