--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_form.html
@@ -40,7 +40,7 @@
             <div class="layui-col-xs4 form-column">
 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('业务名称')}">业务名称</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('业务名称')}">业务名称</div>  <div class="layui-required">*</div>  </div>
                         <div class="layui-input-block ">
                             <input lay-filter="name" id="businessName" name="businessName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('业务名称') }" type="text" class="layui-input"  />
                         </div>
@@ -53,7 +53,7 @@
 
 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('变更日期')}">变更日期</div><div class="layui-required">*</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('变更日期')}">变更日期</div>  <div class="layui-required">*</div>   </div>
                         <div class="layui-input-block ">
                             <input input-type="date" lay-filter="changeDate" id="changeDate" name="changeDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('变更日期') }" type="text" class="layui-input"    lay-verify="|required"   />
                         </div>
@@ -165,7 +165,9 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
 
 
-    var VALIDATE_CONFIG={"changeDate":{"date":true,"labelInForm":"变更日期","inputType":"date_input","required":true}};
+    var VALIDATE_CONFIG={"changeDate":{"date":true,"labelInForm":"变更日期","inputType":"date_input","required":true},
+        "businessName":{"labelInForm":"业务名称","inputType":"text_input","required":true}
+    };
 
 
     var AUTH_PREFIX="eam_asset_data_change";
