--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_list.html
@@ -89,19 +89,21 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
-        <button th:if="${perm.checkAuth('eam_asset_data_change:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
-     </div>
+        <button th:if="${dataChangeCreateBtn}"  id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
+        <button th:if="${agreeBtn}" id="agree-button" class="layui-btn icon-btn layui-btn-sm agree-new-button" lay-event="agree"><i class="layui-icon"></i><span th:text="${lang.translate('同意')}"同意</span></button>
+        <button th:if="${denyBtn}"  id="deny-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm  deny-new-button" lay-event="deny"><i class="layui-icon"></i><span th:text="${lang.translate('拒绝')}">拒绝</span></button>
+    </div>
 </script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
 
-    <button th:if="${perm.checkAuth('eam_asset_data_change:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
-    <button th:if="${perm.checkAnyAuth('eam_asset_data_change:update','eam_asset_data_change:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
-    <button th:if="${perm.checkAuth('eam_asset_data_change:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
-    <button class="layui-btn layui-btn-xs for-approval-button" lay-event="for-approval" th:text="${lang.translate('送审')}" data-id="{{d.id}}">送审</button>
-    <button class="layui-btn layui-btn-xs confirm-data-button" lay-event="confirm-data" th:text="${lang.translate('确认')}" data-id="{{d.id}}">确认</button>
-    <button class="layui-btn layui-btn-xs revoke-data-button" lay-event="revoke-data" th:text="${lang.translate('撤销')}" data-id="{{d.id}}">撤销</button>
+    <button th:if="${dataChangeViewBtn}"     class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
+    <button th:if="${dataChangeModifyBtn}"   class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
+    <button th:if="${dataChangeDeleteBtn}"   class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
+    <button th:if="${forApprovalBtn}"        class="layui-btn layui-btn-xs for-approval-button" lay-event="for-approval" th:text="${lang.translate('送审')}" data-id="{{d.id}}">送审</button>
+    <button th:if="${confirmDataBtn}"        class="layui-btn layui-btn-xs confirm-data-button" lay-event="confirm-data" th:text="${lang.translate('确认')}" data-id="{{d.id}}">确认</button>
+    <button th:if="${revokeDataBtn}"         class="layui-btn layui-btn-xs revoke-data-button" lay-event="revoke-data" th:text="${lang.translate('撤销')}" data-id="{{d.id}}">撤销</button>
 
 </script>
 
@@ -112,7 +114,6 @@
     var AUTH_PREFIX="eam_asset_data_change";
 
     var TABLE_ID=[[${tableId}]];
-    console.log("TABLE_ID:"+TABLE_ID);
     // 变更类型
     var PAGE_TYPE = [[${pageType}]] ;
     // 变更类型
